Added DTO's and mappers for project model

--- a/ProjectManagementAPI/ProjectManagementAPI.csproj
+++ b/ProjectManagementAPI/ProjectManagementAPI.csproj
@@ -16,4 +16,9 @@
         <PackageReference Include="Swashbuckle.AspNetCore" Version="6.4.0"/>
     </ItemGroup>
 
+    <ItemGroup>
+      <Folder Include="DTOs\ProjectTask\" />
+      <Folder Include="DTOs\User\" />
+    </ItemGroup>
+
 </Project>
