--- a/ProjectManagement.API/ProjectManagement.API.csproj
+++ b/ProjectManagement.API/ProjectManagement.API.csproj
@@ -12,6 +12,7 @@
     </ItemGroup>
 
     <ItemGroup>
+      <ProjectReference Include="..\ProjectManagement.Application\ProjectManagement.Application.csproj" />
       <ProjectReference Include="..\ProjectManagement.Core\ProjectManagement.Core.csproj" />
       <ProjectReference Include="..\ProjectManagement.DataAccess\ProjectManagement.DataAccess.csproj" />
     </ItemGroup>
