--- a/ProjectPulse.Web/ProjectPulse.Web.csproj
+++ b/ProjectPulse.Web/ProjectPulse.Web.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk.BlazorWebAssembly">
+<Project Sdk="Microsoft.NET.Sdk.Web">
 
     <PropertyGroup>
         <TargetFramework>net8.0</TargetFramework>
@@ -7,12 +7,7 @@
     </PropertyGroup>
 
     <ItemGroup>
-        <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly" Version="8.0.2"/>
-        <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.DevServer" Version="8.0.2" PrivateAssets="all"/>
-    </ItemGroup>
-
-    <ItemGroup>
-      <ProjectReference Include="..\ProjectPulse.Application\ProjectPulse.Application.csproj" />
+      <ProjectReference Include="..\ProjectPulse.Core\ProjectPulse.Core.csproj" />
     </ItemGroup>
 
 </Project>
